# llm-training

./: package-lock.json
backend/: .gitignore  00-exercises-#1.0.ipynb  01-intro-#1.0.ipynb  02-data-structures-#1.0.ipynb  03-classes-types-decorators-#1.0.ipynb  04-files-async-#1.0.ipynb  README.md  app.db  config.py  database.py  main.py
backend/src/fastapi-template/: README.md  database.py  main.py  pyproject.toml
frontend/: README.md  index.html  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: CartList.tsx  DeleteConfirmDialog.tsx  EditProductDialog.tsx  ProductDetailsDialog.tsx  ProductForm.tsx  ProductList.tsx  ProductToolbar.tsx
frontend/src/services/: api.ts
frontend/src/types/: cart.ts  product.ts
src/: App.tsx  index.css  main.tsx
src/components/: AddProductPage.tsx
src/services/: api.ts
src/types/: product.ts
